Fix checkout dialog width overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -558,6 +558,7 @@ md-list-item[disabled=disabled] .md-list-item-text{
     .activity-dialog,
     md-dialog.activity-dialog {
         max-height: 80%;
+        max-width: 90%;
         position: relative;
         overflow: auto;
         box-shadow: 0px 7px 8px -4px rgba(0, 0, 0, 0.2), 0px 13px 19px 2px rgba(0, 0, 0, 0.14), 0px 5px 24px 4px rgba(0, 0, 0, 0.12);
